# Apostilas_EBE

./: .env.example  .gitignore  CHANGELOG.md  PROJECT_STATE.md  QUICKSTART.md  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-testes.yml  producao-diaria-apostilas.yml
data/: curriculo_apostilas.json  estado_producao.json  rate_limit_state.json  registro_apostilas.json
scripts/: gerar_lote_local.sh  rodar_testes.sh  setup_ambiente.sh
src/ebe_apostilas/: __init__.py
src/ebe_apostilas/cli/: __init__.py  main.py
src/ebe_apostilas/core/: __init__.py  config.py  curriculum.py  logging_config.py  models.py  registry.py  state.py
src/ebe_apostilas/docx_gen/: __init__.py  builder.py  capa.py  styles.py  toc.py
src/ebe_apostilas/gemini/: __init__.py  client.py  prompts.py  queue_manager.py  rate_limiter.py
tests/: conftest.py  test_curriculum.py  test_docx_builder.py  test_gemini_client.py  test_models.py  test_prompts.py  test_rate_limiter.py  test_registry.py  test_state.py
workflows_ready/: producao-diaria-apostilas.yml
